Add manual Community Social attendee email
